--- a/package.json
+++ b/package.json
@@ -26,17 +26,23 @@
     "express": "~4.14.0",
     "flex.css": "^1.1.6",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.9.0",
+    "marked": "^0.3.6",
     "moment": "^2.17.1",
     "mongoose": "^4.7.6",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.12.0",
     "nprogress": "^0.2.0",
+    "quill": "^1.2.0",
     "reload": "^1.1.0",
     "sequelize": "^3.29.0",
     "serve-favicon": "~2.3.0",
+    "simplemde": "^1.11.2",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
-    "vuex": "^2.1.1"
+    "vuex": "^2.1.1",
+    "zepto": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -72,7 +78,7 @@
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-shell": "^0.5.2",
-    "html-webpack-plugin": "^2.8.1",
+    "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
     "json-loader": "^0.5.4",
@@ -84,11 +90,11 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "nightwatch": "^0.9.8",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
